@@ -15,6 +15,7 @@
     * Options to control where you're redirected to after QuickPosting
     * Descriptions for stylesheets in the options window
     * Fix automatic pagination on the Active Messages list
+    * Link to delete your posts from the message list
 
 2008-09-21:
     * version 0.6.6
